--- a/fristfiddlepress.html
+++ b/fristfiddlepress.html
@@ -61,6 +61,29 @@
             background-position: center;
             background-size: cover;
         }
+
+        .go {
+            line-height: 20px;
+            letter-spacing: 1px;
+            word-spacing: 1px;
+            padding-right: 5px;
+            margin-top: 20px;
+            font-weight: lighter;
+            padding-bottom: 12px;
+        }
+
+        .read {
+            letter-spacing: 1px;
+            word-spacing: 1px;
+            padding-right: 5px;
+            font-weight: lighter;
+        }
+
+        .overflow {
+            height: 10cm;
+            text-align: justify;
+            overflow: auto;
+        }
     </style>
 
 </head>
@@ -125,7 +148,7 @@
                 <span style="font-size: 0.5cm; position: relative; top: -8px;">OFFLINE</span>
                 <hr>
             </div>
-            
+
         </div><!--row end-->
     </div><!--container-->
 
@@ -167,10 +190,63 @@
     </div><!--container photo-2 end-->
 
 
-    <div class="container">
+    <div class="container mt-5">
         <div class="card" style="box-shadow: 1px 1px 12px #020001;">
-            <div class="row">
-                
+            <br>
+            <h2 class="text-center mt-3">ONLINE MENTIONS</h2>
+            <div class="row mt-3">
+                <div class="col-md-1"></div>
+
+                <div class="col-md-4">
+                    <img src="https://pn-paul.netlify.app/image/et-prime.jpg" alt="" class="w-100">
+                </div>
+
+                <div class="col-md-1"></div>
+
+                <div class="col-md-5 overflow">
+                    <p>FEB 18, 2020</p>
+                    <h4>ET PRIME</h4>
+                    <p class="go">"Go big, or go home: Lazeez Affaire to Lord of the Drinks, Priyank Sukhija's success
+                        recipe for dining</p>
+                    <p class="read">READ FULL ARTICLE</p>
+                    <hr>
+                    <p>JUL 16, 2018</p>
+                    <h4>AIN</h4>
+                    <p class="go">"First Fiddle Restaurants aims top-line growth by 2020; to opt for franchising route
+                        to expansion"</p>
+                    <p class="read">READ FULL ARTICLE</p>
+                    <hr>
+                    <p>MAY 20, 2019</p>
+                    <h4>BUSINESS LINE</h4>
+                    <p class="go">"First Fiddle opens outlet in Chennai"</p>
+                    <p class="read">READ FULL ARTICLE</p>
+                    <hr>
+                    <p>OCT 20, 2010</p>
+                    <h4>BUSINESS STANDARD</h4>
+                    <p class="go">"First Fiddle Restaurants aims top-line growth by 2020; to opt for franchising route
+                        to expansion"</p>
+                    <p class="read">READ FULL ARTICLE</p>
+                    <hr>
+                    <p>NOV 20, 2018</p>
+                    <h4>CHENNAI ONLINE</h4>
+                    <p class="go">"Happy Hour"</p>
+                    <p class="read">READ FULL ARTICLE</p>
+                    <hr>
+                    <p>FEB 18, 2020</p>
+                    <h4>BUSINESS TODAY</h4>
+                    <p class="go">"Fly High While Experiencing Newly Launched Dragonfly"</p>
+                    <p class="read">READ FULL ARTICLE</p>
+                    <hr>
+                    <p>AUG 28, 2020</p>
+                    <h4>BUSINESS WORLD</h4>
+                    <p class="go">"LORD OF THE DRINKS LAUNCHES IN SOUTH INDIA WITH CHENNAI’S LARGEST RESTO-BAR"</p>
+                    <p class="read">READ FULL ARTICLE</p>
+                    <hr>
+
+                </div>
+
+                <div class="col-md-1"></div>
+
             </div><!--row end-->
         </div>
     </div><!--container end-->
