--- a/fristfiddlepress.html
+++ b/fristfiddlepress.html
@@ -84,6 +84,44 @@
             text-align: justify;
             overflow: auto;
         }
+        footer {
+            background: #111215;
+            padding: 50px;
+            color: #fff;
+        }
+
+        footer .img123 {
+            margin-top: 30px;
+            width: 50%;
+        }
+        .h22 {
+            font-family: 'prague';
+            font-size: 3rem;
+            line-height: 50px;
+            letter-spacing: 3px;
+            color: #fff;
+        }
+
+        .p1 {
+            font-size: 16px;
+            line-height: 28px;
+            letter-spacing: 1px;
+        }
+
+        .h33 {
+            padding-top: 20px;
+            text-transform: uppercase;
+            font-family: 'prague';
+            letter-spacing: 3px;
+            font-size: 18px;
+            color: #fcb11b;
+        }
+
+        .p2 {
+            word-spacing: 3px;
+            letter-spacing: 1px;
+            font-size: 14px;
+        }
     </style>
 
 </head>
@@ -194,7 +232,7 @@
         <div class="card" style="box-shadow: 1px 1px 12px #020001;">
             <br>
             <h2 class="text-center mt-3">ONLINE MENTIONS</h2>
-            <div class="row mt-3">
+            <div class="row mt-3 mb-5">
                 <div class="col-md-1"></div>
 
                 <div class="col-md-4">
@@ -250,6 +288,58 @@
             </div><!--row end-->
         </div>
     </div><!--container end-->
+    <br>
+
+    <footer>
+        <div class="container-fluid ">
+            <div class="row mt-5">
+                <div class="col-md-5">
+                    <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" class="img123">
+                    <br><br>
+                </div>
+
+                <div class="col-md-7">
+                    <h2 class="h22"><span style="color: orange;">CONTACT</span> US</h2>
+                    <p class="p1">We're a team focusing on redefining the way the hospitality industry works by bringing
+                        in concept based restaurants across India. We are truly committed to catering to the
+                        ever-changing cosmopolitan taste of the customer and revolutioning the F & B industry!</p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4 class="h33">ADDRESS</h4>
+                            <p class="p2">S-357 2nd floor, Block S, Panchsheel Park South, Panchsheel Park, New Delhi,
+                                Delhi 110017</p>
+                            <br>
+                            <i class='bx bxl-facebook-circle' style="color: orange; font-size: 40px;"></i>
+                            <i class='bx bxl-instagram' style="color: orange; font-size: 40px;"></i>
+                            <i class='bx bxl-whatsapp' style="color: orange; font-size: 40px;"></i>
+                        </div>
+
+                        <div class="col-md-6 mr-3">
+                            <h4 class="h33">ENQUIRY</h4>
+                            <p class="p2">Email: <i style="color: orange;">customercare@firstfiddle.in</i></p>
+                        </div>
+                    </div><!--row end-->
+                </div>
+            </div><!--row end-->
+        </div><!--container-fluid end-->
+    </footer>
+
+
+    <div class="container-fluid bg-black">
+        <div class="row">
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6 text-center mt-3">
+                <p style="color: white;">EMPLOYEE POLICIES |PRIVACY POLICY |TERMS AND CONDITIONS | BLOG | APP COPYRIGHT
+                    © 2021 FIRST FIDDLE
+                    F&B PRIVATE LIMITED</p>
+            </div>
+            <div class="col-md-3">
+
+            </div>
+        </div><!--row end-->
+    </div><!--container-fluid end-->
 
 
 
