--- a/fristfiddle.html
+++ b/fristfiddle.html
@@ -190,7 +190,42 @@
         </div><!--container-fluid-->
 
     </nav>
-    <img src="https://pn-paul.netlify.app/image/slider1.jpg" alt="" class="w-100 imgmobile">
+    <!--slider div start-->
+    <div class="carousel slide" data-bs-ride="carousel" id="a1">
+
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#a1" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#a1" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#a1" data-bs-slide-to="2"></button>
+
+        </div><!--carousel-indicators end-->
+
+
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="4000">
+                <img src="https://pn-paul.netlify.app/image/slider1.jpg" alt="" class="w-100">
+
+            </div>0
+            <div class="carousel-item" data-bs-interval="4000">
+                <img src="https://pn-paul.netlify.app/image/slider22.jpg" alt="" class="w-100">
+
+            </div>1
+
+            <div class="carousel-item" data-bs-interval="4000">
+                <img src="https://pn-paul.netlify.app/image/slidwr33.jpg" alt="" class="w-100">
+
+            </div>2
+
+        </div><!--carousel-inner end-->
+
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#a1" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#a1" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
     <br>
     <div class="container">
         <h1 class="a text-center">WELCOME TO <b style="color: orange;">FIRST FIDDLE</b></h1>
